Fixing styling around shows

--- a/app/assets/stylesheets/developers.css.scss
+++ b/app/assets/stylesheets/developers.css.scss
@@ -22,10 +22,11 @@
 .star-ratings-css-bottom { z-index: 0; }
 
 #review-box {
-  margin: 10px;
   border: solid;
   border-width: 1px;
-  width: 45%;
+  margin: 0 auto;
+  text-align: center;
+  width: 50%;
 }
 
 h5 {
