--- a/app/views/reviews/new.html.erb
+++ b/app/views/reviews/new.html.erb
@@ -1,3 +1,4 @@
+<section id='form'>
 <h1>Leave a review for <%= @reviewee.first_name %></h1>
 
 <%= form_for [@reviewee, @review]  do |f| %>
@@ -25,3 +26,4 @@
     </li>
   </ul>
 <% end %>
+</section>
