--- a/app/assets/stylesheets/businesses.css.scss
+++ b/app/assets/stylesheets/businesses.css.scss
@@ -14,6 +14,7 @@
  #business-location{
  	text-align: center;
  	padding-bottom: 30px;
+  padding-top: 30px;
   margin: 0 auto;
   width: 50%;
   height: 30%
