--- a/app/assets/stylesheets/flexbox.css.scss
+++ b/app/assets/stylesheets/flexbox.css.scss
@@ -40,6 +40,7 @@
   text-align: center;
   width: 80%;
   background-color: #f9f9f9;
+  padding-top: 20px;
 }
 
 .business-name, .business-info {
@@ -59,8 +60,8 @@
   border-radius: 5%;
   margin: 2em;
   padding: 2em;
-border-width:5px;
-    border-style:outset;
+  border-width:5px;
+  border-style:outset;
 }
 
 h3  {
@@ -88,7 +89,6 @@ h5 {
   position: absolute;
   font-size: 80px;
   color: #f9f9f9;
-  font-family: serif;
   text-align: center;
 }
 
@@ -98,18 +98,17 @@ h5 {
 
 .title {
   position: absolute;
-   top: 100px;
-   left: 10%;
-   width: 100%;
-   font-size: 5em;
-   color: white;
-    font-family: -webkit-body;
-}
+  top: 100px;
+  left: 15%;
+  width: 100%;
+  font-size: 5em;
+  color: white;
+  }
 
 .progress-box {
  position: relative;
    width: 100%;
-   }
+  }
 
 .stairs {
 width: 100%;
