--- a/app/views/developers/index.html.erb
+++ b/app/views/developers/index.html.erb
@@ -2,28 +2,32 @@
 
 <div class= "dev-topbox">
   <%= image_tag("coffee-apple.jpg", :alt => "rss feed", class: "ipad") %>
-  <h1 class="dev-title">Discover Create Contribute</h1>
-  <h1 class="dev-title2">Get Creative, Maximize your talent</h1>
+  <h1 class="dev-title">Discover, Create, Contribute</h1>
 </div>
 <hr>
 
 <div class= "developer-showcase">
 <% @developers.each do |developer| %>
-<div class= "developer-item">
-  <% if has_avatar? developer %>
-<%= image_tag (developer.avatar.url(:square)), class: "inner-items" %>
-<% else %>
-    <%= image_tag "blank-profile-pic.png", class: 'profile-pic inner-items' %>
-  <% end %>
-  <div class = "name-item">
-  <%= link_to developer.first_name, developer_path(developer) %>
-  <br>
-  <% if current_user %>
-    <% if developer.id != current_user.id %>
-  <%= link_to "Send Message", conversations_path(sender_id: current_user.id, recipient_id: developer.id), method: "post", class: "btn btn-success btn-xs start-conversation", "data-sid" => current_user.id, "data-rip" => developer.id %>
+  <div class= "developer-item">
+    <% if has_avatar? developer %>
+      <div>
+        <%= image_tag (developer.avatar.url(:square)), class: "inner-items" %>
+      </div>
+    <% else %>
+      <div>
+        <%= image_tag "blank-profile-pic.png", class: 'profile-pic inner-items' %>
+      </div>
     <% end %>
-  <% end %>
-</div>
+    <div>
+      <div class = "name-item">
+        <div><%= link_to developer.first_name, developer_path(developer) %></div>
+        <% if current_user %>
+          <% if developer.id != current_user.id %>
+            <div><%= link_to "Send Message", conversations_path(sender_id: current_user.id, recipient_id: developer.id), method: "post", class: "btn btn-success btn-xs start-conversation", "data-sid" => current_user.id, "data-rip" => developer.id %></div>
+          <% end %>
+        <% end %>
+      </div>
+    </div>
   </div>
 <% end %>
 </div>
