Add tag line on top of video for homepage

--- a/app/views/businesses/index.html.erb
+++ b/app/views/businesses/index.html.erb
@@ -1,6 +1,7 @@
 
 <div id="home-video">
   <%= video_tag("home.mp4", :autoplay => true, :muted => true, :id => "home-video") %>
+  <h1 class="tag-line">Build My Business</h1>
 </div>
 
 <div>
