--- a/app/assets/stylesheets/flexbox.css.scss
+++ b/app/assets/stylesheets/flexbox.css.scss
@@ -99,12 +99,23 @@ h5 {
 
 .title {
   position: absolute;
-  top: 100px;
-  left: 15%;
+  top: 15%;
   width: 100%;
-  font-size: 5em;
+  font-size: 3em;
   color: white;
+  text-align: center;
 }
+
+.tag-line {
+  position: absolute;
+  top: 6%;
+  width: 100%;
+  text-transform: uppercase;
+  font-size: 3em;
+  color: white;
+  text-align: center;
+}
+
 
 .progress-box {
  position: relative;
