--- a/app/views/businesses/show.html.erb
+++ b/app/views/businesses/show.html.erb
@@ -35,11 +35,13 @@
     <%= render partial: 'partials/status_update', locals: {business: @business }%>
 
 
-  <div>
+  <div class="info">
+    <ul>
     <% if @business.editable_by? current_user %>
       <li><%= link_to 'Edit Business', edit_business_path(@business)%></li>
       <li><%= link_to 'Submit an Update', new_business_status_update_path(@business) %></li>
     <% end %>
+  </ul>
   </div>
   </div>
 
