Update checkbox styles, margings between elements, and seed data

--- a/app/assets/stylesheets/main.css.scss
+++ b/app/assets/stylesheets/main.css.scss
@@ -245,3 +245,13 @@ input[type="submit"] {
 .dev-update {
   font-weight: bold;
 }
+
+
+.dev-review,
+.links-to {
+  margin-bottom: 20px;
+}
+
+.collection-check-box input[type='checkbox'] {
+  width: 10%;
+}
