change css for msg box

--- a/app/assets/stylesheets/main.css.scss
+++ b/app/assets/stylesheets/main.css.scss
@@ -255,3 +255,14 @@ input[type="submit"] {
 .collection-check-box input[type='checkbox'] {
   width: 10%;
 }
+
+#chat {
+  margin: 2em;
+  text-align: center;
+
+}
+
+.msg {
+  font-weight: bold;
+  font-size: larger;
+}
