--- a/app/views/messages/_message.html.erb
+++ b/app/views/messages/_message.html.erb
@@ -6,7 +6,7 @@
     <div class=”list”>
      <div class=”item”>
       <i class=”right triangle icon”></i>
-       <%= message.body %>
+     <h4 class="msg"> <%= message.body %> </h4>
     </div>
     <% if message.read %>
     <p>read</p>
