Update business and developer show pages

--- a/app/assets/stylesheets/flexbox.css.scss
+++ b/app/assets/stylesheets/flexbox.css.scss
@@ -171,3 +171,18 @@ ul.slick-dots {
 .dev-topbox {
   margin: 2em;
 }
+
+
+
+.status-container{
+  background-color: #f9f9f9;
+}
+
+.status-box {
+  background-color: #f9f9f9;
+  border-radius: 5%;
+  margin: 2em;
+  padding: 2em;
+  border-width:5px;
+  border-style:outset;
+}
