--- a/app/views/businesses/show.html.erb
+++ b/app/views/businesses/show.html.erb
@@ -31,8 +31,9 @@
     </li>
 
   </ul>
-
+  <div class='status-containter'>
     <%= render partial: 'partials/status_update', locals: {business: @business }%>
+  </div>
 
 
   <div class="info">
