--- a/app/views/partials/_status_update.html.erb
+++ b/app/views/partials/_status_update.html.erb
@@ -1,4 +1,4 @@
-<div id="status-update">
+<div class="status-box">
     <h3>Updates on <%=business.name%></h3>
     <% business.status_updates.each do |update| %>
      <h4><%= update.description %></h4>
