--- a/app/views/partials/_matching.html.erb
+++ b/app/views/partials/_matching.html.erb
@@ -1,46 +1,48 @@
 <% unless current_user == user %>
+<div class='request-matches'>
+  <% if current_user && ! user.matched?(current_user) && user.cross_type?(current_user) && ! user.closed_match? %>
 
- <% if current_user && ! user.matched?(current_user) && user.cross_type?(current_user) && ! user.closed_match? %>
-
-    <h4>Interested?</h4>
+    <h4 class='match-title'>Interested?</h4>
     <%= link_to "Send Request", matches_path(id: user), :method => :post %>
   <% end %>
 <% end %>
-<% if user.type == "owner" %>
-<h4>Assigned Developer for this project:</h4>
-<% else %>
-<h4>Working with:</h4>
-<% end %>
+  <% if user.type == "owner" %>
+    <h4>Assigned Developer for this project:</h4>
+  <% else %>
+    <h4 class='match-title'>Working with:</h4>
+    <ul>
+      <% user.received_matches.each do |match| %>
+        <% if match.accepted == "true" %>
+        <li>
+          <%= match.user.first_name %>
+        </li>
+        <% end %>
+      <% end %>
+    </ul>
+    <ul>
+      <% user.sent_matches.each do |match| %>
+        <li>
+          <%= match.matched_user.first_name %>
+          <%= match.status %>
+        </li>
+      <% end %>
+    </ul>
+  <% end %>
 
-<ul>
-  <% user.received_matches.each do |match| %>
-    <% if match.accepted == "true" %>
-    <li>
-      <%= match.user.first_name %>
-    </li>
+    <div>
+    <% if current_user == user %>
+      <h4  class='match-title'> Your Pending Requests:</h4>
+      <ul>
+        <% user.received_matches.each do |match| %>
+          <% if match.accepted == "f" %>
+            <li>
+              <%= match.user.first_name %>
+              <%= link_to "Accept",  request_accept_match_path(:id => match) %>
+              <%= link_to "Decline",  request_reject_match_path(:id => match), :method => :delete %>
+            </li>
+          <% end %>
+      </ul>
+      <% end %>
     <% end %>
-  <% end %>
-</ul>
-<ul>
-  <% user.sent_matches.each do |match| %>
-    <li>
-      <%= match.matched_user.first_name %>
-      <%= match.status %>
-    </li>
-  <% end %>
-</ul>
-
-<% if current_user == user %>
-  <h4> Your Pending Requests:</h4>
-  <ul>
-    <% user.received_matches.each do |match| %>
-    <% if match.accepted == "f" %>
-    <li>
-      <%= match.user.first_name %>
-      <%= link_to "Accept",  request_accept_match_path(:id => match) %>
-      <%= link_to "Decline",  request_reject_match_path(:id => match), :method => :delete %>
-    </li>
-    <% end %>
-  </ul>
-  <% end %>
-<% end %>
+    </div>
+</div>
