--- a/app/views/partials/_matching.html.erb
+++ b/app/views/partials/_matching.html.erb
@@ -16,7 +16,7 @@
   <% user.received_matches.each do |match| %>
     <% if match.accepted == "true" %>
     <li>
-      <%= match.user.first_name %>
+      <h4 class="requests"><%= match.user.first_name %></h4>
     </li>
     <% end %>
   <% end %>
@@ -24,19 +24,21 @@
 <ul>
   <% user.sent_matches.each do |match| %>
     <li>
-      <%= match.matched_user.first_name %>
-      <%= match.status %>
+      <hr>
+       <h5 class="requests"><%= match.matched_user.first_name %></h5>
+       <h5 class="requests"><%= match.status %></h5>
+       <hr>
     </li>
   <% end %>
 </ul>
 
 <% if current_user == user %>
-  <h4> Your Pending Requests:</h4>
+  <h4 class="requests"> Your Pending Requests:</h4>
   <ul>
     <% user.received_matches.each do |match| %>
     <% if match.accepted == "f" %>
     <li>
-      <%= match.user.first_name %>
+      <h4 class="requests"><%= match.user.first_name %></h4>
       <%= link_to "Accept",  request_accept_match_path(:id => match) %>
       <%= link_to "Decline",  request_reject_match_path(:id => match), :method => :delete %>
     </li>
