--- a/app/assets/stylesheets/main.css.scss
+++ b/app/assets/stylesheets/main.css.scss
@@ -266,7 +266,7 @@ input[type="submit"] {
 .msg {
   font-weight: bold;
   font-size: larger;
-
+}
 
 
 .review-title {
@@ -282,4 +282,9 @@ input[type="submit"] {
 .project-link {
   margin-top: 10px;
   font-size: 1.2em;
+}
+
+.requests {
+  color: red;
+  font-size: larger;
 }
