--- a/app/views/businesses/show.html.erb
+++ b/app/views/businesses/show.html.erb
@@ -27,7 +27,7 @@
     <%= render partial: 'partials/matching', locals: { user: @owner }%>
 
     <li>
-      <h4>Status: <%=@business.status %></h4>
+      <h4 class="requests">Status: <%=@business.status %></h4>
     </li>
 
   </ul>
