--- a/app/views/messages/_message.html.erb
+++ b/app/views/messages/_message.html.erb
@@ -9,7 +9,7 @@
      <h4 class="msg"> <%= message.body %> </h4>
     </div>
     <% if message.read %>
-    <p>read</p>
+    <p>Read</p>
     <% end %>
   </div>
  </div>
