--- a/config/private_pub.yml.erb
+++ b/config/private_pub.yml.erb
@@ -5,5 +5,5 @@ test:
   server: "http://localhost:9292/faye"
   secret_token: "secret"
 production:
-  server: ENV['PUBSUB_URL']
-  secret_token: ENV['PUBSUB_SECRET_KEY']
+  server: <%= ENV['PUBSUB_URL'] %>
+  secret_token: <%= ENV['PUBSUB_SECRET_KEY'] %>
