--- a/app/views/businesses/complete.html.erb
+++ b/app/views/businesses/complete.html.erb
@@ -1,5 +1,5 @@
 <section id='form'>
-  <h1> Compelte Your Project </h1>
+  <h1> Complete Your Project </h1>
   <%= form_for @business do |f| %>
     <ul>
       <li>
