Change photo size specification

--- a/app/assets/stylesheets/flexbox.css.scss
+++ b/app/assets/stylesheets/flexbox.css.scss
@@ -14,6 +14,8 @@
 
 .inner-items {
   border-radius: 50%;
+  height: 200px;
+  width: 200px;
 }
 
 .name-item {
@@ -39,7 +41,8 @@
 .business-images{
   margin: 0 auto;
   text-align: center;
-  width: 80%;
+  width: 200px;
+  height: 200px;
   background-color: #f9f9f9;
   padding-top: 20px;
 }
