Change pics routes

--- a/app/assets/stylesheets/flexbox.css.scss
+++ b/app/assets/stylesheets/flexbox.css.scss
@@ -47,6 +47,16 @@
   padding-top: 20px;
 }
 
+.biz-box{
+  text-align: center;
+
+}
+
+.business-show-images{
+  width: 400px;
+  height: 400px;
+}
+
 .business-name, .business-info {
   margin: 0 auto;
   text-align: center;
