--- a/app/views/businesses/show.html.erb
+++ b/app/views/businesses/show.html.erb
@@ -11,7 +11,7 @@
       </li>
 
       <li>
-        <h4 class= >Location <%=@business.location%></h4>
+        <h4 class= >Location: <%=@business.location%></h4>
       </li>
       <hr>
       <li>
@@ -46,11 +46,9 @@
   </div>
   </div>
 
-  <div class='business-images business-images-show'>
+  <div class="biz-box">
     <% @business.photos.each do |photo| %>
-     <div >
-       <%=image_tag photo.image.url(:square), class: "biz-pic" %>
-     </div>
+       <%=image_tag photo.image_file_name, class: "business-show-images"%>
     <% end %>
   </div>
 
