--- a/app/assets/stylesheets/flexbox.css.scss
+++ b/app/assets/stylesheets/flexbox.css.scss
@@ -121,9 +121,10 @@ h5 {
 
 .tag-line {
   position: absolute;
-  top: 6%;
+  top: 8%;
   width: 100%;
   text-transform: uppercase;
+  font-weight: bold;
   font-size: 5em;
   color: white;
   text-align: center;
